; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_d3dx_free_const_tab.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_d3dx_free_const_tab.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3dx_const_tab = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.d3dx_const_tab*)* @d3dx_free_const_tab to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @d3dx_free_const_tab(%struct.d3dx_const_tab* %0) #0 {
  %2 = alloca %struct.d3dx_const_tab*, align 8
  store %struct.d3dx_const_tab* %0, %struct.d3dx_const_tab** %2, align 8
  %3 = call i32 (...) @GetProcessHeap()
  %4 = load %struct.d3dx_const_tab*, %struct.d3dx_const_tab** %2, align 8
  %5 = getelementptr inbounds %struct.d3dx_const_tab, %struct.d3dx_const_tab* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @HeapFree(i32 %3, i32 0, i32 %6)
  %8 = call i32 (...) @GetProcessHeap()
  %9 = load %struct.d3dx_const_tab*, %struct.d3dx_const_tab** %2, align 8
  %10 = getelementptr inbounds %struct.d3dx_const_tab, %struct.d3dx_const_tab* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @HeapFree(i32 %8, i32 0, i32 %11)
  %13 = call i32 (...) @GetProcessHeap()
  %14 = load %struct.d3dx_const_tab*, %struct.d3dx_const_tab** %2, align 8
  %15 = getelementptr inbounds %struct.d3dx_const_tab, %struct.d3dx_const_tab* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @HeapFree(i32 %13, i32 0, i32 %16)
  ret void
}

declare dso_local i32 @HeapFree(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
